fix: Replace files losts
Replace files don't correct replaced

--- a/jade-compiler/src/jade/index.jade
+++ b/jade-compiler/src/jade/index.jade
@@ -2,8 +2,8 @@ include layout/head
 include layout/header
 
     div
-      h1 #{title}
-      h2 #{description}
+      h1 Blablabla
+      h2 Bloblo blo blop bloblo
 
     div
       p Lorem ipsum ..
