--- a/jade-compiler/src/jade/layout/head.jade
+++ b/jade-compiler/src/jade/layout/head.jade
@@ -3,9 +3,9 @@ head
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
     meta(name='keywords', content='')
 
-    meta(name='description', content='#{description}')
-    title #{title}
+    meta(name='description', content='Jug')
+    title Le Jug c'est génial !
 
     link(rel="icon", type="image/png", href="favicon.ico")
-    link(rel='stylesheet', href="#{bowerPath}bootstrap/dist/css/bootstrap.css")
+    link(rel='stylesheet', href="bower_components/bootstrap/dist/css/bootstrap.css")
     // endbuild
